# placekyt

./: .gitignore  AGENTS.md  BLOCK_AUTHORING_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  PROGRAMMING_GUIDE.md  README.md
placekyt/: .gitignore  __main__.py  cli.py  main.py  placekyt.spec  pyproject.toml  requirements-dev.txt  resources.py
placekyt/commands/: __init__.py  base.py  connection_cmds.py  edit_cmds.py  placement_cmds.py  project_cmds.py
placekyt/engine/: __init__.py  autoplace.py  autoroute.py  batch_debug.py  bpsk_demo.py  bpsk_duplex_demo.py  bpsk_modem_demo.py  breakpoints.py  build.py  bus_drc.py  bus_router.py  catalog.py  cpsat_router.py  disasm.py  drc.py  errors.py  grc_import.py  grc_sync.py  modem_110b_demo.py  port_config.py  portmap.py  preferences.py  qam16_demo.py  registry.py  route_analysis.py  sim_bridge.py  simulator.py  sram_demo.py  sram_panel.py  trace_model.py
placekyt/model/: __init__.py  block.py  board.py  chip.py  chip_type.py  connection.py  enums.py  events.py  panel.py  placement.py  project.py
placekyt/scripts/: build_bundle.sh
placekyt/tests/: conftest.py  test_abutment_connection.py  test_autoplace.py  test_autoplace_flyline_min.py  test_autoroute.py  test_batch_debug.py  test_batch_trace_retention.py  test_block_appearance.py  test_bpsk_modem.py  test_bpsk_modem_grc_import.py  test_breakpoints.py  test_build.py  test_bus_relay.py  test_bus_router.py  test_catalog.py  test_cli.py  test_coherent_bpsk_rx_build.py  test_coherent_rx_block_build.py  test_coherent_rx_grc_autopnr.py  test_coherent_rx_live_bridge.py  (+68 more)
(+343 files in other folders)
